docs/6.17.0/users/_sources/usingdakota/reference/method-multifidelity_sampling-numerical_solve.rst.txt
.. _method-multifidelity_sampling-numerical_solve:

"""""""""""""""
numerical_solve
"""""""""""""""


Specify the situations where numerical optimization is used for MFMC sample allocation


.. toctree::
   :hidden:
   :maxdepth: 1

   method-multifidelity_sampling-numerical_solve-fallback
   method-multifidelity_sampling-numerical_solve-override
   method-multifidelity_sampling-numerical_solve-sqp
   method-multifidelity_sampling-numerical_solve-nip


**Specification**

- *Alias:* None

- *Arguments:* None


**Child Keywords:**

+-------------------------+--------------------+--------------------+---------------------------------------------+
| Required/Optional       | Description of     | Dakota Keyword     | Dakota Keyword Description                  |
|                         | Group              |                    |                                             |
+=========================+====================+====================+=============================================+
| Optional (Choose One)   | Employ numerical   | `fallback`__       | Fall back to a numerical solve when needed  |
|                         | solve              |                    | for mitigation in MFMC                      |
|                         |                    +--------------------+---------------------------------------------+
|                         |                    | `override`__       | Replace MFMC analytic allocation with a     |
|                         |                    |                    | numerical solution                          |
+-------------------------+--------------------+--------------------+---------------------------------------------+
| Optional (Choose One)   | Optimization       | `sqp`__            | Uses a sequential quadratic programming     |
|                         | Solver             |                    | method for underlying optimization          |
|                         |                    +--------------------+---------------------------------------------+
|                         |                    | `nip`__            | Uses a nonlinear interior point method for  |
|                         |                    |                    | underlying optimization                     |
+-------------------------+--------------------+--------------------+---------------------------------------------+

.. __: method-multifidelity_sampling-numerical_solve-fallback.html
__ method-multifidelity_sampling-numerical_solve-override.html
__ method-multifidelity_sampling-numerical_solve-sqp.html
__ method-multifidelity_sampling-numerical_solve-nip.html



**Description**


Multifidelity Monte Carlo (MFMC) supports an analytic solution for the
allocation of samples per model instance based on response correlations and
relative simulation cost.  In some situations (over-estimated pilot sample,
mis-ordered model correlations), this analytic solution may be either
sub-optimal or undefined, requiring mitigation.

This specification allows for control of this mitigation; in particular,
whether recourse to a numerical solution is strictly a fallback (default)
or is desired as an unconditional override (regardless of the need for
specific mitigations).

Further, when a numerical solve is employed, it can utilize either the
``sqp`` or ``nip`` solver options.

*Default Behavior*
Analytic is preferred, with ``fallback`` to numerical only when mitigation
is required.


